[package]
edition = "2018"
name = "mio"
# When releasing to crates.io:
# - Update CHANGELOG.md.
# - Create git tag
version       = "0.8.2"
license       = "MIT"
authors       = [
  "Carl Lerche <me@carllerche.com>",
  "Thomas de Zeeuw <thomasdezeeuw@gmail.com>",
  "Tokio Contributors <team@tokio.rs>",
]
description   = "Lightweight non-blocking IO"
homepage      = "https://github.com/tokio-rs/mio"
repository    = "https://github.com/tokio-rs/mio"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
include       = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "src/**/*.rs",
  "examples/**/*.rs",
]

# For documentation of features see the `mio::features` module.
[features]
# By default Mio only provides a shell implementation.
default = []

# Enables the `Poll` and `Registry` types.
os-poll = []
# Enables additional OS specific extensions, e.g. Unix `pipe(2)`.
os-ext = ["os-poll"]
# Enables `mio::net` module containing networking primitives.
net = []

[dependencies]
log = "0.4.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2.86"

[target.'cfg(windows)'.dependencies]
miow   = "0.3.6"
winapi = { version = "0.3", features = ["winsock2", "mswsock"] }
ntapi  = "0.3"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.11.0"
libc = "0.2.86"

[dev-dependencies]
env_logger = { version = "0.8.4", default-features = false }
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "aarch64-apple-ios",
  "aarch64-linux-android",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-dragonfly",
  "x86_64-unknown-freebsd",
  "x86_64-unknown-illumos",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-netbsd",
  "x86_64-unknown-openbsd",
]

[package.metadata.playground]
features = ["os-poll", "os-ext", "net"]

[[example]]
name = "tcp_server"
required-features = ["os-poll", "net"]

[[example]]
name = "tcp_listenfd_server"
required-features = ["os-poll", "net"]

[[example]]
name = "udp_server"
required-features = ["os-poll", "net"]
